@@ -1,5 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gchemutils-0.10.3-glibc-2.10.patch 1583 RMD160 0306a058cc3604a330e19e0b05960d5c619ed9a0 SHA1 735f9db751906881e55da9ea0acd7ce20ce4620a SHA256 a9dd891c37df5545c10a08a40ed39cc44c776e4942767758157279d7235b1123
 DIST gnome-chemistry-utils-0.10.12.tar.bz2 4228290 RMD160 381deb76757e1bfa686da6429032c9fa9773ffbd SHA1 a32a536c9bb8653801a58f12ae605f3b12222e4b SHA256 43cb2816b3fe175e017b00244a331bf5b98e286a71de692d65d333502ad90e92
+DIST gnome-chemistry-utils-0.13.1.tar.bz2 5024796 RMD160 a27fb614a0113365a9ee11f5e8bbf7d5cb97a445 SHA1 e7b260345c0f3b898c662077060b27689837ee42 SHA256 f8760ba4fe0d58a52a0fc790b52b4d7bd4628247afd6018481022c43a6e040c7
 EBUILD gchemutils-0.10.12.ebuild 1353 RMD160 50438027731f2ea8f64c9cec28592dee1cff9ec4 SHA1 557c2b3148df1b07c6b11382e7caf21f38544c51 SHA256 33ecb738cc2616bf6c66a0d01ed4bdc20e26dea66e1decfe241e0c859c8c1d5d
-MISC ChangeLog 2262 RMD160 a3ac557c1a754c2191066629ff9eb35c50a2bab6 SHA1 c189d38d9bd521ffe99e5d1690a1b0f30cf390e5 SHA256 86f838a056f6142b6ce6a84f3e7ea329ef357e744322913fa033010643d31eef
+EBUILD gchemutils-0.13.1.ebuild 1796 RMD160 b4ec41b5b6b086ac956932f18ecf1571b6c8628a SHA1 2bbe90dc7d81b3bef4862e1cf20e827f139bc582 SHA256 af224110d401968484134a78b744155460fe76db80d87aa9e20e7051ae0526b5
+MISC ChangeLog 2570 RMD160 3f89def9f225a85835890be6434c819d217afd4d SHA1 49dd8dcbecf7531ca043ca9e10a91e9b3c7cd858 SHA256 d271b80e300536f53e95918e1825492fb2876e8c079b250abda2d2649d31d5de
 MISC metadata.xml 363 RMD160 e9bfd61261c21ae3c66702671fed61a49c45f031 SHA1 079138faa975ff2e6475f1b315fdba1ccb9d4faa SHA256 42666fb16d5d69c9e7864c2074465d53389650fece462548b0dfa8a392e12908
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iJwEAQECAAYFAkzuXw0ACgkQIiMqcbOVdxRfQAP/bz4UDDxV5PAjuBD3KngB3hLG
+YRFBXRzp7EfQnagVyqyl7COf+Xv5PV0CuKzAQrRfSDlINMWEgLO4IYuwsH4C0+Rf
+WWlo/uccaMVCRzBeyIDs82V4kbJlQZYr5rG4CPMfyccNFL1GzqafHbhiJ+JriFpe
+CXeMZCLM+yIIf9y95/o=
+=B/u+
+-----END PGP SIGNATURE-----
