@@ -1,20 +1,35 @@
-AUX gromacs-4.0.4-configure-gfortran.patch 731 RMD160 1ccea4fafd6837461114fc36bc31db4f9390fc08 SHA1 0ec79e9ab691cbae5f116adaa3245ef0b123a598 SHA256 5b902eac127bc84e188224fbfe0182ab3fa3b03c200325ada9cd628bb913b479
-AUX gromacs-4.0.4-sparc-cyclecounter.patch 492 RMD160 0edd643a6dc11820e9785561f03047795044311f SHA1 66c0339c308b3d661def0e184311be510e804c3b SHA256 01565b45b73b32d8d6f83bf1fdf750de4215b24935d992c81191a52d01eb6bed
-AUX gromacs-4.0.9999-ccache.patch 678 RMD160 043d0e207e04a275fe00a3bd2b28f8dc0dfd4b7f SHA1 08bc5ac8bc0b28f68e1ede994d49616dd920af5d SHA256 ca477d54351c418f1d39dda29373a1426c9403ec0d2f21c28fc7568227d47632
-AUX gromacs-4.0.9999-configure-gfortran.patch 760 RMD160 1700579b0c2dfb8cbb743d795aa9f0f9f467c06b SHA1 e6924d3598b20195fcb6809e64f333def5b0f919 SHA256 1a59dfde8a3db8db729bd19691a5945e02be2725fa66ec0b125ab3b931518761
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gromacs-4.0.9999-docdir.patch 1352 RMD160 336ab23b4b65430caf3205650a8787e8e33d2137 SHA1 77e0cc966c4d755f603b2d0ab9a075c0ee6b7361 SHA256 8ead457b06f7f943455a95494be4648e539934699d29e955d2e05ac02f1ca4ef
 DIST ffamber_v4.0-doc.tar.gz 7915520 RMD160 aeadb18bd88bcd9e6fc45af22af15c51e32c66a3 SHA1 8d4969fa7eec660b41f769874be9698980b49ed0 SHA256 0b3395570dfe9bf808a297fcb120e1f525f38a91791fbafe6e444d542d7754aa
 DIST gmxtest-4.0.4.tgz 14845017 RMD160 c7c583415438bdef4c9996da9064254e9460cf16 SHA1 998179aa2bfbc4f80514f10ed774762f85c854c3 SHA256 6a7f787f4bb7cbecb688115ff0854a5ffd2ef33487d7bce4b031e63848b6f361
-DIST gromacs-4.0.4.tar.gz 8443779 RMD160 f90327814170c26a43d99fe7587357a46989fdec SHA1 9466f3ab95d60c0aba8916b1fcc70129cb4e4d72 SHA256 8aefd03cd3269e85c84427f05ceea6d3e16874cd4a90bf3f6fec2b2be24c426f
-DIST gromacs-4.0.5.tar.gz 8465397 RMD160 4c2344629307f3a3daa11b986153d65883a44783 SHA1 9969aae6f77e2216add22a7b29805c4de8df649f SHA256 436b7a2a1ba3637eb07e30d676d78962008373a28fd17a3d889fa5816ca30339
 DIST gromacs-4.0.7.tar.gz 8404518 RMD160 4fa8e5c90f549ef627a98a907a166676692a4c4b SHA1 8519bef2fa989fb487d54612b0a2d0228f228b30 SHA256 048f8ece2829f01d99f7e04e1d6e8f88d3a32273192274f2e9fcf71f41f212c1
+DIST gromacs-4.0.7_missing_distfiles.patch.bz2 5696 RMD160 b49b6e99e00cfcc1cda3a7f28c3a508d7e2c482d SHA1 8812d13e746d35d2b2b2d1e2224ffd6b60973bc2 SHA256 a648c9da000f44749eb6964c668523059125aab29946a08a6b2d22a90637363c
 DIST gromacs-4.0.7_upstream2010-06-08.patch.gz 11876 RMD160 d65c9cf0386319953113ac1a5dc548768a745345 SHA1 823a72c4126d789ae38921bd46743414d4f391c1 SHA256 91d3eee79a0ec20df506e59bab789fe15428b4323548af5f97ccbae506036879
-DIST gromacs-4.5.1.tar.gz 10304547 RMD160 116ca5bc4644d1460086cfb2097961abd11db63b SHA1 cbe52c3ec613fe8b652cd24b86c4fdf31b58c71b SHA256 768a02ee995f950b442dc131c25c1b946f1907d2286fd3fa3eb7fa967ed8efb0
-DIST gromacs-4.5.pdf 2445884 RMD160 65548f56a71697128ab44cae59d5b7997c86fbdb SHA1 1a6ff8fb56873eccfa03b104770a136e0befe298 SHA256 028cb5b150185157a7d93849c0c1f8e442c41c942932ffbf0530ef1774e66449
-DIST manual-4.0.pdf 2135100 RMD160 b963642f8e1433f11328c3d0c4b1645c9de506da SHA1 8ae951ee15b2a7dc626331fce36511bc8766144c SHA256 646f810477eee2d710de6019c52056550413d0ba77baf9680195c835ddafe80a
-EBUILD gromacs-4.0.4.ebuild 6918 RMD160 d31ffadfe240147555b227c36456d81c35f5f5dc SHA1 52b59952c4fb4861ed6bbe2f48ba4c3443b07cd4 SHA256 078f3942a1b5bf671326be97dacb22f37783c082c154bf193e28e18c4e314d3e
-EBUILD gromacs-4.0.5.ebuild 6762 RMD160 c9945b966f14d1aa3fab96928a8c1269f2d0b4fb SHA1 535119ceb458903fd294f21959df4338eafd475d SHA256 dc76914d616ac4f750e9073601f1fc9cd30ab6f7b15a01152b95ef625a755c3b
-EBUILD gromacs-4.0.7-r4.ebuild 10001 RMD160 ed610d1c502d424549ffe3eac35e6c53f526d8fa SHA1 0e8fb79624c682fb6eccd26c37e972c1e57b5590 SHA256 5828e2cb1db8425e528acb961af0aa1ca88befcc3c6b49778ea042d1fac8f152
-EBUILD gromacs-4.5.1.ebuild 7575 RMD160 686727c7c26b20a2068417b0dbe284b2bf771e7f SHA1 582f88829a46789b41738876a0874ad63fd8a343 SHA256 ba6dab49699bc8ee494c9f26b517cc9aa45a70916a2a46f38a93eb57ac8c95e9
-MISC ChangeLog 11805 RMD160 6468505b725adae00ac0b00fb47ffd0c7793ad1e SHA1 e3ad1ee4aac7a5b6db6794717059066ac9004efb SHA256 fcf7a45b22212eae6aa52533d5dbcdde5dbea0278a32e153b51cff770456b482
+DIST gromacs-4.0.7_upstream2010-09-15.patch.bz2 21551 RMD160 a3d40f6932ea7c10a1d1f3cbce21269b58b0949b SHA1 809c823717f36e334a132ed844dbfccba84b13f9 SHA256 3c9d2ad09f855c67e8b4d042a1ee77bad88e78fb0de047eb314e8e4c4e58600f
+DIST gromacs-4.5.3.tar.gz 10338471 RMD160 2bb9cab3c611b93c4323e16b0d171c16cd407bf1 SHA1 c4845e5e62d1f53ee443301dad00138feba6d275 SHA256 d298b81b172c2ab36b8fab8f1d3091dc48e283f35a1574bf7f9f0df382074e06
+DIST gromacs-manual-4.0.pdf 2135100 RMD160 b963642f8e1433f11328c3d0c4b1645c9de506da SHA1 8ae951ee15b2a7dc626331fce36511bc8766144c SHA256 646f810477eee2d710de6019c52056550413d0ba77baf9680195c835ddafe80a
+DIST gromacs-manual-4.5.3.pdf 2438528 RMD160 07f5ec0db1a773e77806c79554e5bb4fa8533dfd SHA1 7c81fc18e426d1090c485968d81957977ff10fc9 SHA256 6794fca3a2125918a03cd6bae3c031ab9b213c42a5f68a720c955b9107508717
+EBUILD gromacs-4.0.7-r4.ebuild 10024 RMD160 1c4727686660eee8d8094f7cbdeaeca84e11fbc7 SHA1 010c544894e7f546d3811ac23ea3ea832c5a70d6 SHA256 d21ffa7b5a7125ed42676f5b3819ff0257c101b653d36710d3275ae82ac58661
+EBUILD gromacs-4.0.7-r5.ebuild 9753 RMD160 05606f8caab1096cffb583e20293cdf2317aee1c SHA1 690ccdefe2eea0d2a9971bb8186298ffbdcc3bbb SHA256 b633cec3d6ed708af1039c5dc1233af3cd7f5b8dc6c61b83c2ec06ddb8a3fb95
+EBUILD gromacs-4.5.3.ebuild 7925 RMD160 3bd1ea1f61c25a7dd2f60292f978130e050da57a SHA1 d2452a2e3557e935d3f42b9b777d134533edc002 SHA256 cd29ebf4e939df76ca523f22aeffa1c3d8919c3f4ac22aa75c4674c635f9a624
+MISC ChangeLog 12321 RMD160 8193503743b526f0d0d33326e3ab42bdf6a0fbc8 SHA1 8d91ed479fd5522fdcba098ccb54ff919a420041 SHA256 8d8fc3a4e4d71d4da21e687955946cee38cf8053a90db3d5489b2d00123aaf79
 MISC metadata.xml 643 RMD160 e9ffc42d792f15f3d4438a0de225277ec4814041 SHA1 c83fd4a32d896b7a2586667bc684d46f9daf8693 SHA256 177885ec674e8630a9c9451a0e0a35fc83615b39b387a67002e27f1b0d6b19b2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iQIcBAEBCAAGBQJM7l/+AAoJEOf+E+/4L5LmAg4QAKbbjPxstZaWPgwonYv1+7vA
+swWiPq3R6yzl8y3aj7LycJaPEC7TwQHGtznDzGg/63ShRajBQLiQxs7CRrbEj40Z
+/W0V4znwfp9Ux4hNKiEVMjja2vAieu75WR47oDQa7xdYHP7IguuP9i0fcSBKDPmr
+thL8yTTBLZrgKkTkXeyXTrr86NjEvPEQttmiKBx7kLrwXFa4yZ+8df1VB5A0Mrr3
+NP3vOgK565HmychOh50Nig2HmNgF+r9U8yT6mhr29+Y1g9BLsWY60hkLOR13P8ZX
+Da0lgLCX+C5WG3qwlimRAm6bP+aKYdVKwkvmITKdf0FLiBeheH4fBNn6rb1DYa1M
+A8gR3CdQyYajQp42srOZHfJUAVZ/fnq1DarKcWTDVvVAoUXEVosrtgGa0YLcXWBP
+urXD0gL8CjyH7gORqtY1mZ5B/xbzH4Sh+1h4I1BDDrleAXo5yDU0KLiLlQMe6ZTW
+LHAlpYO0lQsPtVv4FtR5cBpRmFw+BE+IlUl+UL+FOWp+ZouZZXW2+zFy8cRgve8u
+5Qlj6/mc2pgjiuzcCt4xfc4Qy/m8acsJOMMj3yJby15FgVy6hDZ24PVBOI/D6qGn
+a5ENxDbikgEhAg4/KfjFQe7cZil0bowtnMpqDbfocq8eG8QrWcK/pDCqx7PHUnUv
+BGQShNQ+BRjPLOmXIoQg
+=zB+n
+-----END PGP SIGNATURE-----
